--- a/Front/src/shared/components/carousel/Carousel.module.scss
+++ b/Front/src/shared/components/carousel/Carousel.module.scss
@@ -50,6 +50,11 @@ div.root {
     }
 }
 
+h6 {
+    max-height: 110px;
+    overflow: hidden;
+}
+
 .badge {
     padding: 6px 12px;
     background-color: white;
