--- a/Front/src/pages/empresa/Empresa.module.scss
+++ b/Front/src/pages/empresa/Empresa.module.scss
@@ -1,25 +1,42 @@
-@import '../../scss/variables.scss';
+@import '../../scss/index.scss';
 
 div.paginaEmpresa {
-    --size: calc(100vw - 250px);
+
+    justify-content: flex-start;
+
+    & > div {
+        & > :not(img) {
+            padding: 0 15px;
+        }
+    }
 
     div.description {
-        padding: 0px 30px 0px 30px;
-        text-align: justify;
+        // padding: 0px 30px 0px 30px;
+        // text-align: justify;
         text-justify: inter-word;
     }
     img {
-        width: var(--size);
-        height: var(--size);
-        max-width: 250px;
-        max-height: 250px;
+        width: 100%;        
         object-fit: cover;
         object-position: center center;
     }
+
+    ul {
+        margin-top: 5px;
+        margin-left: 20px;
+    }
+
     button {
         background-color: $purple;
         color: white;
         font-size: medium;
-        padding: 5px 40px 5px 40px;
+        padding: 5px 40px 5px 40px !important;
+        margin-left: 15px;
+        margin-top: 10px;
+    }
+
+    @include non-phone {
+        max-width: 800px;
+        margin: auto;
     }
 }
