--- a/Front/src/pages/empresa/Empresa.module.scss
+++ b/Front/src/pages/empresa/Empresa.module.scss
@@ -40,3 +40,15 @@ div.paginaEmpresa {
         margin: auto;
     }
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
